plugins {
    id 'application'
    id("org.openjfx.javafxplugin") version "0.1.0"
}

application {
    mainClass = 'client.Main'
	tasks.run.workingDir = rootProject.projectDir
}

javafx {
    version = "21.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml']
}

java {
	sourceCompatibility = '21'
}


dependencies {
	implementation project(":commons")
	
	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.1.5'
	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.1.5'
	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.1.5'
	
	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
	
	implementation 'com.google.inject:guice:7.0.0'

	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.2.2'
	
	implementation 'org.openjfx:javafx-controls:21.0.2'
	implementation 'org.openjfx:javafx-fxml:21.0.2'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
	testImplementation 'org.testfx:testfx-junit5:4.0.18'
	testImplementation 'org.testfx:testfx-core:4.0.18'
	testImplementation 'org.openjfx:javafx-graphics:21.0.2'
	testImplementation 'org.openjfx:javafx-controls:21.0.2'

	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:LATEST'
	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.5'
}